--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,50 @@
 div.margin {
   margin-left: 15px;
+  position: absolute;
+}
+
+body {
+  background-image: url("https://images.pexels.com/photos/234272/pexels-photo-234272.jpeg?cs=srgb&dl=black-and-white-black-and-white-fog-234272.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-size: 130%, auto;
+  background-color: rgb(245, 245, 245);
+  left:0;
+  top:0;
+  position: static;
+}
+
+article {
+  display: inline-grid;
+  grid-template-rows: 20vh 20vh 20vh  20vh;
+  grid-template-columns: 20vh 20vh 20vh;
+  grid-gap: 7.5px;
+  position: static;
+  transform: translate(-50%, 50%);
+  margin-bottom: 7.5px;
+  margin-left: 50%;
+  justify-content: center;
+}
+
+section {
+  color: rgb(240, 240, 240);
+  display: flex;
+  font-family: 'Playfair Display SC', serif;
+  justify-content: center;
+  align-items: center;
+  border: 0px solid rgb(46, 46, 46);
+  font-size: 5vh;
+  background-color : rgb(24, 24, 24);
+}
+
+
+.article:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.rectangle {
+  height: 1vh;
+  width: 6vh;
+  background-color: rgb(238, 12, 12);
 }
