--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ a:active {
 h1 {
   font-family: 'friction';
   margin-top: 4.2vh;
-  color: #222222;
+  color: #2c2c2c;
   font-size: 4vh;
   justify-content: center;
   align-items: center;
