--- a/css-riddle-challenge/styles.css
+++ b/css-riddle-challenge/styles.css
@@ -1,11 +1,15 @@
 h1 {
     font-style: italic;
     font-variant: small-caps;
+    font-family: 'Roboto Slab', serif;
+    color: turquoise
 }
 
 h2 {
     font-style: italic;
     font-variant: small-caps;
+    font-family: 'Playfair Display', serif;
+    color: red;
 }
 
 p {
