--- a/tile-your-background-image-challenge/styles.css
+++ b/tile-your-background-image-challenge/styles.css
@@ -3,3 +3,11 @@ body {
         background-color: red;
         background-repeat: repeat;
 }
+
+h1 {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: rgb(255, 0, 0);
+    font-family: 'comic sans ms';
+}
