--- a/add-margins-and-padding-challenge/styles.css
+++ b/add-margins-and-padding-challenge/styles.css
@@ -16,7 +16,7 @@ p {
     font-size: 36px;
     line-height: 48px;
     padding: 0px;
-    color: rgb(37, 37, 37);;
+    color: #191919;
 }
 
 span {
@@ -24,5 +24,5 @@ span {
 }
 
 em {
-    color: rgb(255, 210, 211);
+    color: #F8D1D2;
 }
