--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,13 @@
-/*div.margin {
-  margin-left: 15px;
-  position: absolute;
-  z-index:12;
- top: 0;
-}*/
-
-
 
 body {
   left:0;
   top:0;
+  background-color: rgb(245, 245, 245);
 }
-
-/*article {
-  display: inline-grid;
-  grid-template-rows: 15.5vh 15.5vh 15.5vh 15.5vh ;
-  grid-template-columns: 15.5vh 15.5vh 15.5vh 15.5vh;
-  grid-gap: 0vh;
-  transform: translate(-10vh);
-  margin-left: 67%;
-  margin-top: -100vh;
-  justify-content: center;
-  /*-webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
-  mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-}
-
-section {
-  color: #1f1f1f;
-  font-family: 'moon 2.0';
-  justify-content: center;
-  align-items: center;
-  border: 0px solid #1f1f1f;
-  font-size: 2.7vh;
-}
-*/
 
 ul {
   margin:0; 
-  padding-left:3vh;
+  padding-left:5vh;
   list-style-type: none; 
 }
 
@@ -47,16 +17,12 @@ li {
   font-family: 'Open Sans', sans-serif;
 }
 
-.article:after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
-}
+
 
 .rectangle {
   height: 1vh;
   width: 31vh;
-  background-color: #ff5252;
+  background-color: #ff5757;
   transform: translate(-10vh);
   margin-left: 67%;
   margin-top: 0vh;
@@ -65,26 +31,33 @@ li {
   margin-bottom: 10vh;
 }
 
+
+
 .rectangletwo {
   height: 100%;
-  width: 35vh;
-  background-color: #ff5252;
+  width: 80vh;
+  background-color: #ff5757;
   position: fixed;
   z-index:10;
-  left:0;
+  left:50%;
+  margin-left: -40vh;
   top: 0;
   overflow: scroll;
+  -webkit-box-shadow: 1px 0px 19px -4px rgba(0,0,0,0.78); 
+  box-shadow: 1px 0px 19px -4px rgba(0,0,0,0.78);
 }
 
 .rectanglethree {
   height: 80%;
-  width: 35vh;
-  background-color: #ff5252;
+  width: 80vh;
+  background-color: #ff5757;
   position: fixed;
   z-index:10;
-  left:0;
+  left:50%;
+  margin-left: -40vh;
   top: 13vh;
   overflow: scroll;
+  
 }
 
 
@@ -103,7 +76,7 @@ a:visited {
 /* mouse over link */
 a:hover {
   text-decoration: none;
-  color: #d3afaf;
+  color: #ffb584;
 }
 
 /* selected link */
@@ -117,23 +90,7 @@ h1 {
   margin-top: 4.2vh;
   color: #2c2c2c;
   font-size: 4vh;
- padding-left:3vh;
+  margin-left:5vh;
+  z-index: 11;
 }
 
-#bg {
-  position: fixed; 
-  top: -50%; 
-  left: -50%; 
-  width: 500%; 
-  height: 500%;
-}
-#bg img {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  margin: auto; 
-  min-width: 50%;
-  min-height: 50%;
-}
