--- a/classes-ids-and-quotes-challenge/styles.css
+++ b/classes-ids-and-quotes-challenge/styles.css
@@ -7,6 +7,8 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: 'Comic Sans MS';
+    text-align:center;
+    transform: scaleY(3);
 }
 
 @keyframes argh-my-eyes {
@@ -22,3 +24,78 @@ h1 {
   -moz-animation:    argh-my-eyes 0.2s infinite;
   animation:         argh-my-eyes 0.5s infinite;
 }
+
+.cool-quote {
+    color: turquoise;
+    font-family: 'Comic Sans MS';
+    transform: skewY(20deg);
+    margin-left:50%;
+    font-size: 10vh;
+}
+
+#favorite-quote{
+    color:#f2f;
+      -webkit-animation: flash linear 1s infinite;
+      animation: flash linear 1s infinite;
+      transform: rotate(-70deg);
+      font-weight: bold;
+
+  }
+
+  @-webkit-keyframes flash {
+      0% { opacity: 1; } 
+      50% { opacity: .1; } 
+      100% { opacity: 1; }
+  }
+  @keyframes flash {
+      0% { opacity: 1; } 
+      50% { opacity: .1; } 
+      100% { opacity: 1; }
+  }
+
+.bg {
+    animation:slide 0.5s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, turquoise 50%, rgb(255, 0, 0) 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+  }
+  
+  .bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration:2s;
+  }
+  
+  .bg3 {
+    animation-duration:1s;
+  }
+
+  @keyframes slide {
+    0% {
+      transform:translateX(-25%);
+    }
+    100% {
+      transform:translateX(25%);
+    }
+  }
+
+h1 {
+    animation-name: spinner;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
+    transform-style: preserve-3d;
+    text-align:center;
+  }
+  @keyframes spinner {
+    from {
+      transform: rotateY(0deg);
+    }
+    to {
+      transform: rotateY(-360deg);
+    }
+  }
