--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ li {
   top: 0;
   overflow: scroll;
   -webkit-box-shadow: 1px 0px 19px -4px rgba(0,0,0,0.78); 
-  box-shadow: 1px 0px 19px -4px rgba(0,0,0,0.78);
+  box-shadow: 1px 0px 19px -4px rgba(29, 29, 29, 0.78);
 }
 
 .rectanglethree {
